secrets/custom-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"nginx","nginx.ingress.kubernetes.io/proxy-read-timeout":"3600","nginx.ingress.kubernetes.io/ssl-redirect":"true","nginx.ingress.kubernetes.io/use-regex":"true"},"name":"tb-ingress-ui","namespace":"tesenso"},"spec":{"rules":[{"host":"tesenso.seliselocal.com","http":{"paths":[{"backend":{"service":{"name":"tb-web-ui","port":{"number":8080}}},"path":"/","pathType":"ImplementationSpe [...]
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
  creationTimestamp: "2022-08-21T12:06:25Z"
  generation: 1
  name: tb-ingress-ui
  namespace: tesenso
  resourceVersion: "2427944"
  uid: d5bc59b9-0d22-4813-ac14-f3e0fa6d2c87
spec:
  rules:
  - host: tesenso.seliselocal.com
    http:
      paths:
      - backend:
          service:
            name: tb-web-ui
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
      - backend:
          service:
            name: tb-web-ui
            port:
              number: 8080
        path: /.*
        pathType: ImplementationSpecific
  - host: glencore.seliselocal.com
    http:
      paths:
      - backend:
          service:
            name: tb-web-ui
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
      - backend:
          service:
            name: tb-web-ui
            port:
              number: 8080
        path: /.*
        pathType: ImplementationSpecific
  - host: hawle.seliselocal.com
    http:
      paths:
      - backend:
          service:
            name: tb-web-ui
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
      - backend:
          service:
            name: tb-web-ui
            port:
              number: 8080
        path: /.*
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - tesenso.seliselocal.com
    - glencore.seliselocal.com
    - hawle.seliselocal.com
    secretName: seliselocal-tls
status:
  loadBalancer:
    ingress:
    - ip: 20.250.76.88
